[package]
name = "bustdir"
version = "0.3.0"
edition = "2024"
description = "Read a directory and generate cache-busting hashes for it"
keywords = ["cache-busting", "cache"]
categories = ["web-programming", "caching"]
readme = "README.md"
repository = "https://github.com/randomarborne/bustdir"
license = "Apache-2.0 OR MIT"

[features]
default = []
askama = ["dep:askama", "get_or_random"]
tera = ["dep:tera", "get_or_random"]
get_or_random = ["dep:rand"]

[dependencies]
askama = { version = "0.14", default-features = false, optional = true }
tera = { version = "1", default-features = false, optional = true }
blake3 = { version = "1", features = ["neon"] }
rand = { version = "0.8", optional = true }
ahash = "0.8"
